# onboard-computer

./: CMakeLists.txt  README.md  main.c  main.cpp
include/: rgb_led.h
lib/: CMakeLists.txt
lib/bldc_motor/: CMakeLists.txt  bldc_motor.cpp  bldc_motor.h
lib/led/: CMakeLists.txt  led_controller.cpp  led_controller.h
lib/led/on_off_led/: CMakeLists.txt  on_off_led.cpp  on_off_led.h
lib/led/rgb_led/: CMakeLists.txt  rgb_led.cpp  rgb_led.h
lib/pid_controller/: CMakeLists.txt  pid_controller.h  pid_controller.tpp
lib/pwm_helper/: CMakeLists.txt  pwm_helper.cpp  pwm_helper.h
lib/vector3/: CMakeLists.txt  vector3.cpp  vector3.h
scripts/: flash.sh
src/: rgb_led.cpp
tests/: CMakeLists.txt  test_rgb_led.cpp
